--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,166 +8,20 @@
           <span class="logo-name">Rafmak</span>
           <i class='bx bx-x' ></i>
         </div>
-        <ul class="links">
-         <li>
-          <a th:href="@{/products/sanders}">Abrazives</a>
+        <ul class="links" >
+         <li >
+          <a th:each="category : ${categories}" th:text="${category.name}"  th:href="@{/subCategories/{id}(id=${category.id})}"></a>
               <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
             <ul class="htmlCss-sub-menu sub-menu">
-              <li class="more">
-                <span><a th:href="@{/products/sanders/discs}">Discs</a>
+              <li class="more" th:each="sub : ${category.subs}">
+                <span><a th:href="@{/products/{id}(id=${sub.id})}" th:text="${sub.name}"></a>
                 <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/sanders/blocks}">Blocks</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-               
-              </li>
-              <li class="more">
-                <span><a th:href="@{/products/sanders/rolls}">Rolls</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-               
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/sanders/softs}">Softs</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/sanders/wets}">WPF</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-            
-              </li>
-              
-            </ul>
-          </li>
-          
-          
-          
-          
-          <li>
-            <a th:href="@{/products/coats}">Coats & Primers</a>
-            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
-            <ul class="htmlCss-sub-menu sub-menu">
-              <li class="more">
-                <span><a th:href="@{/products/coats}">Coats</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/primers}">Primers</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-             
-              </li>
-              <li class="more">
-                <span><a th:href="@{/products/hardeners}">Hardeners</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-             
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/thinners}">Thinners</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/putties}">Putties</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-             
-              </li>
-              
-            </ul>
-            
-          </li>
-          
-           <li>
-            <a th:href="@{/products/tools}">Tools&Equip</a>
-            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
-            <ul class="htmlCss-sub-menu sub-menu">
-              <li class="more">
-                <span><a th:href="@{/products/tools}">Tools</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-               <li class="more">
-                <span><a th:href="@{/products/guns}">Sprays</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/nozzles}">Nozzles</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/helpers}">Blocks</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-             
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/safeties}">Safety</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-            
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/extrass}">Extras</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
+                </span>
               </li>
              </ul>
-            </li>
-          
-          
-          <li>
-            <a th:href="@{/products/polishes}">Polish</a>
-            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
-            <ul class="htmlCss-sub-menu sub-menu">
-              <li class="more">
-                <span><a th:href="@{/products/polishes}">Polish</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-              <li class="more">
-                <span><a th:href="@{/products/pads}">Pads</a>
-                <i class='bx bxs-chevron-right arrow more-arrow'></i>
-              </span>
-              
-              </li>
-              
-            </ul>
-            
           </li>
+          
+          
           
          
           <li sec:authorize="hasRole('ROLE_ADMIN')" >
@@ -199,15 +53,8 @@
           </div>
           
           </li>
-          
-         
-          
-          </li>
-          
-        </ul>
-          
-          
-         
+       </ul>
+  
         </div>
       </div>
      
