--- a/src/main/resources/templates/fragments/slider.html
+++ b/src/main/resources/templates/fragments/slider.html
@@ -3,7 +3,7 @@
 <div class="img-slider">
       <div class="slide active">
        <a th:href="@{/products/coats}">
-        <img src="/img/debeer2.jpg" alt="">
+        <img src="/images/debeer2.jpg" alt="">
         </a>
         <div class="info">
           <h2><span id="debeer" >Debeer</span></h2>
@@ -12,7 +12,7 @@
       </div>
       <div class="slide">
        <a th:href="@{/products/primers}">
-        <img src="/img/spectro.jpg" alt="">
+        <img src="/images/spectro.jpg" alt="">
         </a>
         <div class="info">
           <h2><span id="debeer" >spectrometer</span></h2>
@@ -21,7 +21,7 @@
       </div>
       <div class="slide">
        <a th:href="@{/products/tools}">
-        <img class="slide-img" src="/img/mirka.jpg" alt="">
+        <img class="slide-img" src="/images/mirka.jpg" alt="">
         </a>
         <div class="info">
           <h2><span id="mirka">Mirka</span></h2>
@@ -32,7 +32,7 @@
       </div>
       <div class="slide">
       <a th:href="@{/products/guns}">
-        <img src="/img/sata.png" alt="">
+        <img src="/images/sata.png" alt="">
         </a>
         <div class="info">
         <h2><span id="sata" >Sata</span></h2>
@@ -42,7 +42,7 @@
       </div>
       <div class="slide">
       <a th:href="@{/products/safeties}">
-        <img src="/img/finixa1.jpg" alt="">
+        <img src="/images/finixa1.jpg" alt="">
         </a>
         <div class="info">
            <h2><span id="finixa" >Finixa</span></h2>
