--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -25,7 +25,7 @@
           
          
           <li sec:authorize="hasRole('ROLE_ADMIN')" >
-          <span><a th:href="@{/admin}">Administration</a> </span>
+          <span><a th:href="@{/adminPanel}">Administration</a> </span>
          </li>
          
         </ul>
@@ -35,7 +35,7 @@
         <i class='bx bxs-user'></i>
         
          <div class="input-box" sec:authorize="hasRole('ROLE_ANONYMOUS')">
-          <form th:action="@{/login}" method="post">
+          <form th:action="@{/home}" method="post">
              <input class="input1" type="text"  placeholder="Email" name="username" required >
              <input class="input2" type="password" placeholder="Password" name="password" required>
               <button class="login" type="submit">Login</button>
