--- a/src/main/resources/templates/singleProductPage.html
+++ b/src/main/resources/templates/singleProductPage.html
@@ -90,7 +90,7 @@
                  
           <div th:unless="${weight eq null}">
           <p  >
-          Weight :
+          Liters :
             <span th:text="${weight.weigth.displayValue}" class='drink-data'>Lt.</span> 
           </p>
           </div>
@@ -205,12 +205,12 @@
                <div sec:authorize="hasRole('ROLE_ADMIN')">
                 
                   
-                <form th:action="@{/products/setAvailabilityToSander/{id}/{gid}(id=${sander.id},gid=${gran.id})}" method="post">
-                  <button th:if="${gran.isAvailable eq true}">Set Not Available</button>
-                  <button th:unless="${gran.isAvailable eq true}">Set Available</button>
+                <form th:action="@{/products/setAvailabilityToSander/{id}/{gid}(id=${product.id},gid=${product.id})}" method="post">
+                  <button th:if="${product.isAvailable eq true}">Set Not Available</button>
+                  <button th:unless="${product.isAvailable eq true}">Set Available</button>
                 </form>
                 
-                <form th:action="@{/products/removeGranulationFromSander/{id}/{gid}(id=${sander.id},gid=${gran.id})}" method="post">
+                <form th:action="@{/products/removeGranulationFromSander/{id}/{gid}(id=${product.id},gid=${product.id})}" method="post">
                  <button >Remove</button>
                 </form>
                 <br>
@@ -230,12 +230,12 @@
                <div sec:authorize="hasRole('ROLE_ADMIN')">
                 
                   
-                <form th:action="@{/products/setAvailabilityToSander/{id}/{gid}(id=${sander.id},gid=${gran.id})}" method="post">
-                  <button th:if="${gran.isAvailable eq true}">Set Not Available</button>
-                  <button th:unless="${gran.isAvailable eq true}">Set Available</button>
+                <form th:action="@{/products/setAvailabilityToSander/{id}/{gid}(id=${product.id},gid=${product.id})}" method="post">
+                  <button th:if="${product.isAvailable eq true}">Set Not Available</button>
+                  <button th:unless="${product.isAvailable eq true}">Set Available</button>
                 </form>
                 
-                <form th:action="@{/products/removeGranulationFromSander/{id}/{gid}(id=${sander.id},gid=${gran.id})}" method="post">
+                <form th:action="@{/products/removeGranulationFromSander/{id}/{gid}(id=${product.id},gid=${product.id})}" method="post">
                  <button >Remove</button>
                 </form>
                 <br>
