--- a/src/main/resources/templates/nozzles.html
+++ b/src/main/resources/templates/nozzles.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rafmak</title>
+  <link rel="stylesheet" th:href="@{/css/forms.css}">
   <link rel="stylesheet" th:href="@{/css/style.css}">
      <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -17,40 +18,27 @@
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
-<br>
-<div th:if="${param.delete}" class="success-msg">
-       <i class="fa fa-check"></i>
-        You've successfully deleted product from the products list  !!!
-      </div>
-      <div class="pill-nav">
-  <a th:href="@{/products/tools}">Tools</a>
-  <a th:href="@{/products/guns}">Sprays</a>
-  <a class="active" th:href="@{/products/nozzles}">Nozzles</a>
-  <a th:href="@{/products/helpers}">Blocks</a>
-  <a th:href="@{/products/safeties}">Safety</a>
-  <a th:href="@{/products/extrass}">Extras</a>
+<div class="container">
+  <form th:action="@{/addNewProductNozzles/{id}(id=${product.id})}" th:object="${product}"  method="post">
+        
+
+    <h3>Select Nozzle Sizes</h3>
+    
+  <ul>
+  <li th:each="nozzle : ${nozzles}">
+  
+    <input  type="checkbox" th:field="*{nozzles}" th:value="${nozzle}" />
+    <label  th:text="${nozzle.displayValue}"></label>
+   
+  </li>
+ </ul>
+  
+     <div class="button-container">
+    <button type="submit" class="button"><span>Submit</span></button>
+  </div>
+  </form>
+ 
 </div>
-<h1 class="middle">Nozzles</h1>
-
- <section class='roomsList'>
-            <div class='roomslist-center'>
-             <article class='room' th:each="nozzle : ${nozzles}" >
-            <div class='img-container'>
-              <img th:src="${nozzle.imageUrl}" alt='sander image'/>
-              <div class="price-top">
-                  <h6 th:text = "${nozzle.price}"></h6>
-                  <p>MKD</p>
-
-              </div>
-              <a th:href="@{/products/nozzle/{id}(id=${nozzle.id})}" class='btn-primary room-link'>
-                  Details 
-                  </a>
-            </div>
-            <p class='room-info' th:text="${nozzle.description} + ' ' + ${nozzle.nozzleSize.displayValue}"></p>
-        </article>
-
-            </div>
-        </section>
 <div th:replace="fragments/footer :: footer"></div>
 <script type="text/javascript" th:src="@{/js/js.js}"></script>
 </body>
