didn't have time for more

--- a/src/main/resources/templates/cartPage.html
+++ b/src/main/resources/templates/cartPage.html
@@ -107,7 +107,7 @@
            </div>
         </div>
       </td>
-      <td></td>
+      <td > <input type="number" th:value="${product.qty}"/></td>
       <td></td>
      </tr>
     </table>
